# Cohere_Embed4_Sample

./: .env.sample  .gitignore  README.md  ingest.py  main.py  pyproject.toml  query.py
